name:                bstats
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mlent/bstats#readme
license:             MIT
license-file:        LICENSE
author:              Monica Lent
maintainer:          lent.monica@gmail.com
copyright:           2017 Monica Lent
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src/lib
  exposed-modules:     Lib
                     , Printer
                     , Posts
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
                     , split
  default-language:    Haskell2010

executable bstats-exe
  hs-source-dirs:      src/cli
  main-is:             Main.hs
  other-modules:       Cli
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bstats
                     , filepath
  default-language:    Haskell2010

test-suite bstats-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Spec
  build-depends:       base
                     , bstats
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , tasty-smallcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mlent/bstats
